# rust-traffic-data-backend

./: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile
.sqlx/: query-a14f729966897f728aa22e43b7fd4976ac803e6ae8af66375ace2ccd6dfd0bad.json  query-dba86f4d10bce083206edeb76c6685d207dba4055dd96a20d1956bf16fe8cdd8.json
dev/: auto-deploy.sh  build-docker.sh  run-server.sh  stop-server.sh
migrations/: 20240201_CREATE_TABLE.sql  20240201_INSERT_DATA.sql  20240202_init.down.sql  20240202_init.up.sql
src/: main.rs
src/controllers/: mod.rs  traffic_controller.rs
src/models/: mod.rs  traffic_model.rs
src/routes/: mod.rs  traffic_route.rs
